//
// protoc --java_out=src/main/java/ --proto_path=/path/to/mesos/include/mesos/ --proto_path=src/main/proto/ src/main/proto/marathon.proto
//
syntax = "proto2";

package mesosphere.marathon;

option java_package = "mesosphere.marathon";
option java_outer_classname = "Protos";

import "mesos/mesos.proto";

message Constraint {
  required string field = 1;
  enum Operator {
      // Field must be unique across all tasks.
      UNIQUE = 0;
      // Field must match the regex given by value.
      LIKE = 1;
      // Tasks will be clustered, i.e. all tasks need to have the same value. If value is not set, any value will be
      // accepted for the first task, and subsequent tasks must use that same value.
      CLUSTER = 2;
      // Tasks will be grouped by field. Value specifies the minimum size of each group.
      GROUP_BY = 3;
      // Field must not match the regex given by value.
      UNLIKE = 4;
      // Field will be grouped by field. Value specifies the maximum size of each group.
      MAX_PER = 5;
      // Field must be the specified value
      IS = 6;
  }
  required Operator operator = 2;
  optional string value = 3;
}

message HealthCheckDefinition {
  enum Protocol {
    HTTP = 0;
    TCP = 1;
    COMMAND = 2;
    HTTPS = 3;
    MESOS_HTTP = 4;
    MESOS_HTTPS = 5;
    MESOS_TCP = 6;
  }
  enum IpProtocol {
    IPv4 = 1;
    IPv6 = 2;
  }
  required Protocol protocol = 1;
  optional uint32 portIndex = 2;
  optional uint32 gracePeriodSeconds = 3 [default = 15];
  optional uint32 intervalSeconds = 4 [default = 10];
  optional uint32 timeoutSeconds = 5 [default = 20];
  optional string path = 6 [default = "/"]; // used for HTTP only
  optional uint32 maxConsecutiveFailures = 7 [default = 3];
  optional mesos.CommandInfo command = 8;
  optional bool ignoreHttp1xx = 9 [default = false];
  optional uint32 port = 10;
  optional uint32 delaySeconds = 11 [default = 15];
  // portName and portIndex are exclusive; both must not be set
  optional string portName = 12;
  optional IpProtocol ipProtocol = 13 [default = IPv4];;
}

message ReadinessCheckDefinition {
  enum Protocol {
    HTTP = 0;
    HTTPS = 1;
  }
  optional string name = 1;
  optional Protocol protocol = 2;
  optional string path = 3;
  optional string portName = 4;

  optional uint64 intervalMillis = 5;
  optional uint64 timeoutMillis = 6;

  repeated uint32 httpStatusCodeForReady = 7;
  optional bool preserveLastResponse = 8;
}

// deprecated, left here only to support migrations
message ObsoleteIpAddress {
  repeated string groups = 1;
  repeated mesos.Label labels = 2;
  optional ObsoleteDiscoveryInfo discoveryInfo = 3;
  optional string networkName = 4;
}

// deprecated, left here only to support migrations
message ObsoleteDiscoveryInfo {
  repeated mesos.Port ports = 1;
}

message NetworkDefinition {
  enum Mode {
    UNKNOWN = 0; // so that we can distinguish between set/unset values
    HOST = 1;
    CONTAINER = 2;
    BRIDGE = 3;
  }

  optional Mode mode = 1;
  optional string name = 2; // for CONTAINER mode only
  repeated mesos.Label labels = 3; // for CONTAINER, BRIDGE modes only
}

message ServiceDefinition {
  required string id = 1;
  required mesos.CommandInfo cmd = 2;
  required uint32 instances = 3;
  repeated mesos.Resource resources = 4;
  optional string description = 5;
  repeated uint32 ports = 6;
  repeated Constraint constraints = 7;
  required string executor = 8 [default = ""];
  // optional double taskRateLimit = 9 [default = 1];
  optional ContainerInfo OBSOLETE_container = 10;
  optional string version = 11 [default = "1970-01-01T00:00:00.000Z"]; //a version is required since version 0.5
  repeated HealthCheckDefinition healthChecks = 12;
  optional int64 backoff = 13 [default = 1000]; // stored as Millis
  optional double backoffFactor = 14 [default = 1.15];
  optional UpgradeStrategyDefinition upgradeStrategy = 15;
  repeated string dependencies = 16;
  repeated string storeUrls = 17;
  optional bool require_ports = 18 [default = false];
  optional ExtendedContainerInfo container = 19;
  repeated mesos.Parameter labels = 20;
  optional int64 maxLaunchDelay = 21 [default = 3600000]; // stored as Millis
  optional ResourceRoles acceptedResourceRoles = 22;
  optional int64 last_scaling_at = 23;
  optional int64 last_config_change_at = 24;
  optional ObsoleteIpAddress OBSOLETE_ipAddress = 25; // deprecated since 1.5
  optional ResidencyDefinition residency = 26;
  repeated mesos.Port portDefinitions = 27;
  repeated ReadinessCheckDefinition readinessCheckDefinition = 28;
  repeated Secret secrets = 29;
  repeated EnvVarReference envVarReferences = 30;
  optional int64 taskKillGracePeriod = 31; // stored as Millis
  optional UnreachableStrategy unreachableStrategy = 32;
  optional KillSelection killSelection = 33 [ default = YoungestFirst ];
  repeated NetworkDefinition networks = 34; // supersedes ObsoleteIpAddress
  optional mesos.TTYInfo tty = 35;
}

enum KillSelection {
  YoungestFirst = 1;
  OldestFirst = 2;
}

message UnreachableStrategy {
  // UnreachableDisabled is represented by both of these fields missing
  optional uint64 inactiveAfterSeconds = 1 [default = 900 ]; // 15 minutes
  optional uint64 expungeAfterSeconds = 2 [default = 604800 ]; // 7 days
}

// we serialize PodDefinition and Instances as json, only required for legacy content
message Json {
  required string json = 1;
}

message ResourceRoles {
  repeated string role = 1;
}

message ContainerInfo {
  required bytes image = 1 [default = ""];
  repeated bytes options = 2;
}

// Copied from mesos.proto and adjusted to meet the needs for persistent volumes
// Extends DockerInfo.PortMapping to include `service_port`.
message ExtendedContainerInfo {

  // Docker on a Docker engine
  message DockerInfo {
    message ImagePullConfig {
      enum Type {
        SECRET = 1;
      }

      required Type type = 1;

      // The UTF-8 character encoded byte data, which is expected as
      // a docker config file in JSON format. This field is used for
      // supporting docker private registry credential per container.
      // Users can specify different docker config files for pulling
      // their private images from different registries.
      optional mesos.Secret secret = 2;
    }

    required string image = 1;

    // deprecated in favor of ServiceDefinition.networks since 1.5
    optional mesos.ContainerInfo.DockerInfo.Network OBSOLETE_network = 2 [default = HOST];

    // deprecated in favor of ExtendedContainerInfo.PortMapping,since 1.5
    message ObsoleteDockerPortMapping {
      optional uint32 host_port = 1;
      required uint32 container_port = 2;
      optional string protocol = 3;
      optional string name = 4;
      repeated mesos.Label labels = 5;
      optional uint32 service_port = 100 [default = 0];
    }

    // deprecated in favor of ExtendedContainerInfo.port_mappings, since 1.5
    repeated ObsoleteDockerPortMapping OBSOLETE_port_mappings = 3;

    optional bool privileged = 4 [default = false];

    // Allowing arbitrary parameters to be passed to docker CLI.
    // Note that anything passed to this field is not guaranteed
    // to be supported moving forward, as we might move away from
    // the docker CLI.
    repeated mesos.Parameter parameters = 5;

    // With this flag set to true, the docker containerizer will
    // pull the docker image from the registry even if the image
    // is already downloaded on the agent.
    optional bool force_pull_image = 6;
  }

  // Docker on the universal Mesos engine
  message MesosDockerInfo {
    // The name of the image. Expected format:
    //   [REGISTRY_HOST[:REGISTRY_PORT]/]REPOSITORY[:TAG|@TYPE:DIGEST]
    //
    // See: https://docs.docker.com/reference/commandline/pull/
    required string image = 1;

    // Credential to authenticate with docker registry.
    // NOTE: This is not encrypted, therefore framework and operators
    // should enable SSL when passing this information.
    optional mesos.Credential deprecated_credential = 2; // Deprecated since 1.5

    // With this flag set to true, the universal Mesos containerizer will
    // pull the docker image from the registry even if the image
    // is already downloaded on the agent.
    optional bool force_pull_image = 3;

    // Docker config.json which is used when pulling Docker images.
    optional DockerInfo.ImagePullConfig pull_config = 4;
  }

  // AppC on the universal Mesos engine
  message MesosAppCInfo {
    // The name of the image.
    required string image = 1;

    // An image ID is a string of the format "hash-value", where
    // "hash" is the hash algorithm used and "value" is the hex
    // encoded string of the digest. Currently the only permitted
    // hash algorithm is sha512.
    optional string id = 2;

    // Optional labels. Suggested labels: "version", "os", and "arch".
    repeated mesos.Label labels = 3;

    // With this flag set to true, the universal Mesos containerizer will
    // pull the docker image from the registry even if the image
    // is already downloaded on the agent.
    optional bool force_pull_image = 4;
  }

  message PortMapping {
    optional uint32 host_port = 1;
    required uint32 container_port = 2;
    optional string protocol = 3;
    optional string name = 4;
    repeated mesos.Label labels = 5;
    optional uint32 service_port = 6 [default = 0];
    repeated string network_names = 7;
  }

  required mesos.ContainerInfo.Type type = 1;
  repeated Volume volumes = 2;
  repeated PortMapping port_mappings = 6; // since 1.5

  optional DockerInfo docker = 3;
  optional MesosDockerInfo mesosDocker = 4;
  optional MesosAppCInfo mesosAppC = 5;
}

// Copied from mesos.proto and adjusted to meet the needs of persistent volumes
// Describes a volume mapping either from host to container or vice
// versa. Both paths can either refer to a directory or a file.
message Volume {

  // Defining properties of persistent volumes
  message PersistentVolumeInfo {
    required uint64 size = 1;
    optional mesos.Resource.DiskInfo.Source.Type type = 2;
    repeated Constraint constraints = 3;
    optional uint64 maxSize = 4;
  }

  // Defining properties of external volumes
  message ExternalVolumeInfo {
    optional uint64 size = 1;
    required string name = 2;
    required string provider = 3;
    repeated mesos.Label options = 4;
  }

  // Defining properties of secret volumes
  message SecretVolumeInfo {
    required string secret = 1;
  }

  required mesos.Volume.Mode mode = 3;

  // Path pointing to a directory or file in the container. If the
  // path is a relative path, it is relative to the container work
  // directory. If the path is an absolute path, that path must
  // already exist.
  required string container_path = 1;

  // The following specifies the source of this volume. At most one of
  // the following should be set.

  // Absolute path pointing to a directory or file on the host or a
  // path relative to the container work directory.
  optional string host_path = 2;

  // The source of the volume is an Image which describes a root
  // filesystem which will be provisioned by Mesos.
  optional mesos.Image image = 4;

  // Defines a Persistent Volume; implies no hostPath or external.
  optional PersistentVolumeInfo persistent = 5;

  // Defines an External Volume; implies no hostPath or persistent.
  optional ExternalVolumeInfo external = 6;

  // Defines a SecretVolume; implies no hostPath, persistent or external.
  optional SecretVolumeInfo secret = 7;
}

message StorageVersion {
  enum StorageFormat {
    LEGACY = 0;
    PERSISTENCE_STORE = 1;
  }
  required uint32 major = 1;
  required uint32 minor = 2;
  required uint32 patch = 3;
  // when we read old formats, we always assume legacy.
  optional StorageFormat format = 4 [default=LEGACY];
}

message UpgradeStrategyDefinition {
  required double minimumHealthCapacity = 1;
  optional double maximumOverCapacity = 2 [default = 1.0];;
}

message GroupDefinition {
  message AppReference {
    required string id = 1;
    required string version = 2;
  }
  required string id = 1;
  required string version = 2;
  // legacy: new storage uses AppReferences
  repeated ServiceDefinition deprecated_apps = 3;
  repeated Json deprecated_pods = 8;
  repeated GroupDefinition groups = 4;
  repeated string dependencies = 5;
  repeated AppReference apps = 6;
  repeated AppReference pods = 7;
}

message DeploymentPlanDefinition {
  required string id = 1;
  optional string timestamp = 2;
  // Note: deprecated_* can't be read by legacy persistent stores if they aren't set (since they were required)
  // They are no longer read by PersistenceStores
  optional GroupDefinition deprecated_original = 4;
  optional GroupDefinition deprecated_target = 5;
  // The new original and target are required by PersistenceStores
  optional string original_root_version = 6;
  optional string target_root_version = 7;
}

message TaskFailure {
  required string app_id = 1;
  required mesos.TaskID task_id = 2;
  required mesos.TaskState state = 3;
  optional string message = 4 [default = ""];
  optional string host = 5 [default = ""];
  required string version = 6;
  required string timestamp = 7;
  optional mesos.SlaveID slaveId = 8;
}

/**
 * Describes a state entry, a versioned (via a UUID) key/value pair.
 * Copied from libmesos (src/messages/state.pro) to ensure
 * compatibility with ZooKeeperState from libmesos.
 */
message ZKStoreEntry {
  required string name = 1;
  required bytes uuid = 2;
  required bytes value = 3;

  // This flag indicates, if the byte array in value is gzip compressed
  // Introduced in Marathon 0.12
  // Optional to be backward compatible
  optional bool compressed = 4 [default = false];
}

message ResidencyDefinition {
  enum TaskLostBehavior {
    RELAUNCH_AFTER_TIMEOUT = 0;
    WAIT_FOREVER = 1;
  }

  optional int64 relaunchEscalationTimeoutSeconds = 1;
  optional TaskLostBehavior taskLostBehavior = 2;
}

message Secret {
  required string id = 1;
  required string source = 2;
}

message EnvVarReference {
  enum Type {
    UNKNOWN = 0;
    SECRET = 1;
  }

  required Type type = 1;
  required string name = 2;
  optional EnvVarSecretRef secretRef = 3;
}

message EnvVarSecretRef {
  required string secretId = 1;
}
